# cpp_otus

./: README.md
ch_10_cpp20/: concepts.cpp
ch_13_gof_1/: abstract_factory.cpp  factory_method.cpp  singleton.cpp
ch_14_GoF_2/: adapter.cpp  bridge.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp  proxy.cpp
ch_1_ci/: main  main.cpp
ch_23_multithreding/: CMakeLists.txt  async.cpp  call_once.cpp  condition.cpp  mutex  mutex.cpp  mutexes.cpp  packaged_task.cpp  parallel_for.cpp  promise.cpp  raceconditions.cpp  thread.cpp
ch_24_concurrency_templates/: CMakeLists.txt  active_object.cpp  barrier.cpp  double_checked_locking.cpp  guarded_suspension.cpp  hardware_concurrency.cpp  nuclear_reaction.cpp  read_write_lock.cpp  waiting_queue.cpp
ch_25_async/: CMakeLists.txt  async.cpp  cashier_events.cpp  fiber.cpp  linux_async.cpp  threads.cpp  waiting_queue.cpp
ch_2_cpp11/: const_ptr
ch_4/: literal  literal.cpp
